# mini_wf_engine

./: __main__.py  pyproject.toml  workflow.json
activities/: demo_transformation.py  loadFile.py  readFile.py  transform.py  transformation_selected.py
core/: activity.py  activity_factory.py  workflow_context.py  workflow_engine.py
input/: demo.csv
